# dosilt-mcp-study

./: .env_sample  .gitignore  README.md  Untitled.ipynb  client.py  client_cli.py  pyproject.toml  server.py
WithServerSystem/: client.py  client_react.py  server.py
WithoutServerSystem/: client.py  client_cli.py
